--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello
+Zoox Fun Facts!
+
+Zoox is owned entirely by Amazon
+There are no plans for Zoox to provide a ride service for SLAC employees
+You are not permitted to take photos of Zoox robo-taxis
+SLAC's Cooperative Research and Development Agreement with Zoox "explores questions related to uncertainty in machine learning model, which can be utilized, for example, in autonomous vehicles"
