--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@ Zoox Fun Facts!
 
 Zoox is owned entirely by Amazon
 There are no plans for Zoox to provide a ride service for SLAC employees
-You are not permitted to take photos of Zoox robo-taxis
+SLAC employees are not permitted to take photos of Zoox robo-taxis
 SLAC's Cooperative Research and Development Agreement with Zoox "explores questions related to uncertainty in machine learning model, which can be utilized, for example, in autonomous vehicles"
+Amazons other major contracts include:
+* $1.2 billion with the Israeli government (including the IDF)
+* $10 billion with the NSA
+* $9 billion with the Department of Defense
+
+Smile for the Zoox mobile! :)
