--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang = "en">
 <head>
   <h1 align = "center"> Zoox Fun Facts!</h1>
-  <style type = "text/css">
-    a.nounderline {text-decoration: none; }
-  </style>
 </head>
 
 <style>
@@ -13,6 +10,7 @@
     font-family: 'Courier';
     color: "black";
   }
+  a {text-decoration:none;}
 </style>
 
 <body>
