--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     font-family: 'Courier';
     color: "black";
   }
-  a {text-decoration:none;}
+  a {
+    color: #0060B6
+    text-decoration:none;
+  }
 </style>
 
 <body>
